--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #5f9ea0;
-    color: white
+    color: black;
     margin: 0;    
 }
 
@@ -69,7 +69,7 @@ ul {
 }
 
 li img {
-    max-width: 100%
+    max-width: 100%;
     height: auto;
 }
 
